--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
         header h1 {
             margin: 0;
-            font-size: 3em;
+            font-size: 2em;
         }
         nav ul {
             list-style: none;
@@ -33,24 +33,24 @@
             text-align: center;
         }
         nav ul li {
-            display: inline;
-            margin: 0 15px;
+            display: inline-block;
+            margin: 0 10px;
         }
         nav ul li a {
             color: #f0e68c;
             text-decoration: none;
             font-weight: bold;
-            font-size: 1.2em;
+            font-size: 1em;
         }
         .container {
-            padding: 30px;
+            padding: 20px;
             text-align: center;
         }
         .featured-memes img, .meme-gallery img {
             width: 100%;
-            max-width: 400px;
+            max-width: 100%;
             height: auto;
-            border: 5px solid #2c3e50;
+            border: 3px solid #2c3e50;
             border-radius: 10px;
             margin: 10px 0;
         }
@@ -59,9 +59,8 @@
             color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
+            position: relative;
             width: 100%;
-            bottom: 0;
             font-family: 'Lobster', cursive;
         }
     </style>
