--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             padding: 0;
             color: #333;
             background-color: #f0e68c;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         header {
             background: #2c3e50;
@@ -45,6 +48,7 @@
         .container {
             padding: 20px;
             text-align: center;
+            flex: 1;
         }
         .featured-memes img, .meme-gallery img {
             width: 100%;
@@ -59,8 +63,6 @@
             color: white;
             text-align: center;
             padding: 10px 0;
-            position: relative;
-            width: 100%;
             font-family: 'Lobster', cursive;
         }
     </style>
