--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
         }
         .featured-memes img, .meme-gallery img {
             width: 100%;
-            max-width: 100%;
+            max-width: 300px;
             height: auto;
             border: 3px solid #2c3e50;
             border-radius: 10px;
-            margin: 10px 0;
+            margin: 10px auto;
+            display: block;
         }
         footer {
             background: #2c3e50;
@@ -81,16 +82,16 @@
     <div class="container" id="home">
         <h2>Featured Memes</h2>
         <div class="featured-memes">
-            <img src="https://via.placeholder.com/400x300.png?text=Snoopsuke+Meme+1" alt="Snoopsuke Meme 1">
-            <img src="https://via.placeholder.com/400x300.png?text=Snoopsuke+Meme+2" alt="Snoopsuke Meme 2">
+            <img src="https://via.placeholder.com/300x300.png?text=Snoopsuke+Meme+1" alt="Snoopsuke Meme 1">
+            <img src="https://via.placeholder.com/300x300.png?text=Snoopsuke+Meme+2" alt="Snoopsuke Meme 2">
         </div>
     </div>
 
     <div class="container" id="gallery">
         <h2>Meme Gallery</h2>
         <div class="meme-gallery">
-            <img src="https://via.placeholder.com/400x300.png?text=Meme+Gallery+1" alt="Meme Gallery 1">
-            <img src="https://via.placeholder.com/400x300.png?text=Meme+Gallery+2" alt="Meme Gallery 2">
+            <img src="https://via.placeholder.com/300x300.png?text=Meme+Gallery+1" alt="Meme Gallery 1">
+            <img src="https://via.placeholder.com/300x300.png?text=Meme+Gallery+2" alt="Meme Gallery 2">
         </div>
     </div>
 
@@ -99,4 +100,3 @@
     </footer>
 </body>
 </html>
-
