--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="social-links">
                 <a href="https://t.me/snoopsuke" target="_blank">Telegram</a>
                 <a href="https://twitter.com/Snoopsukee" target="_blank">Twitter</a>
-                <a href="https://example.com/buy" class="buy-button" target="_blank">Buy Now</a>
+                <a href="https://pump.fun/375wMKqdeuBPmX1kLuuNRit7Pnf2juonVVmUdbUjpump" class="buy-button" target="_blank">Buy Now</a>
             </div>
         </nav>
     </header>
